K3S/service.yml
apiVersion: v1
kind: Service
metadata:
  name: slobplot-api
  namespace: slobplot
spec:
  selector:
    app: slobplot-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
